.provarCaches/00D410000011HE0EAM/objects/rstk__fsoackh__c.object
<CustomObject>
    <description>fsoackh__c</description>
    <fields>
        <fullName>rstk__address1__c</fullName>
        <inlineHelpText>Acknowledgement Header Address Line 1</inlineHelpText>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address2__c</fullName>
        <inlineHelpText>Acknowledgement Header Address Line 2</inlineHelpText>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address3__c</fullName>
        <inlineHelpText>Acknowledgement Header Address Line 3</inlineHelpText>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__addressname2__c</fullName>
        <label>Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__addressname__c</fullName>
        <inlineHelpText>Address Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__agreement__c</fullName>
        <inlineHelpText>Acknowledgement Header SO Agreement</inlineHelpText>
        <label>Agreement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__carrier__c</fullName>
        <inlineHelpText>Acknowledgement Header Carrier</inlineHelpText>
        <label>Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__city__c</fullName>
        <inlineHelpText>Acknowledgement Header City</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__companylogo__c</fullName>
        <inlineHelpText>Acknowledgement Header Company Logo</inlineHelpText>
        <label>Company Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rstk__contact__c</fullName>
        <inlineHelpText>The name of the contact for this customer</inlineHelpText>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__country__c</fullName>
        <inlineHelpText>The name of the contact for this customer</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custlogo__c</fullName>
        <inlineHelpText>Acknowledgement Header Country</inlineHelpText>
        <label>Customer Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__customername__c</fullName>
        <inlineHelpText>Acknowledgement Header Customer Name</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custpo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer PO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custref__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custrev__c</fullName>
        <inlineHelpText>Customer Revision</inlineHelpText>
        <label>Customer Order Rev</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__discountamt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discountamtcc__c</fullName>
        <inlineHelpText>Discount Amount - Customer Currency</inlineHelpText>
        <label>Discount Amount - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discountpct__c</fullName>
        <inlineHelpText>Acknowledgement Header Discount Percentage</inlineHelpText>
        <label>Order Discount Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__division__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__duedate__c</fullName>
        <description>The due date fro the order</description>
        <inlineHelpText>The due date fro the order</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__email__c</fullName>
        <inlineHelpText>Acknowledgement Header Email Address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__expiredate__c</fullName>
        <inlineHelpText>If this is a print template for a quote rather than an order then this is the expiring date of the quote</inlineHelpText>
        <label>Quote Expiring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__extcomment__c</fullName>
        <inlineHelpText>External Comment</inlineHelpText>
        <label>External Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__fax__c</fullName>
        <inlineHelpText>Acknowledgement Header Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__fob__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FOB</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__freightamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Amount</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__freightamtcc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Freight Amount - Customer Currency</inlineHelpText>
        <label>Freight Amount - Customer Currency</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__freightterms__c</fullName>
        <inlineHelpText>Acknowledgement Header Freight Terms</inlineHelpText>
        <label>Freight Terms</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_currexchrate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZ_OBSOLETE_Order Currency Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_discountamtcc__c</fullName>
        <formula>rstk__discountamt__c  * rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_freightamtcc__c</fullName>
        <formula>rstk__freightamt__c  * rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_handlingamtcc__c</fullName>
        <formula>rstk__handlingamt__c  * rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_ordertotalcc__c</fullName>
        <formula>rstk__ordertotal__c * rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_packageamtcc__c</fullName>
        <formula>rstk__packageamt__c *  rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_shiptotalcc__c</fullName>
        <formula>rstk__shiptotal__c * rstk__fsoackh_ordertotalcc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Header</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Headers</relationshipLabel>
        <relationshipName>SO_Acknowledgement_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_sohdrextn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Header Extension</label>
        <referenceTo>rstk__sohdrextn__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Headers</relationshipLabel>
        <relationshipName>fsoackhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_sormh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Return Material Authorization</label>
        <referenceTo>rstk__sormh__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Headers</relationshipLabel>
        <relationshipName>SO_Acknowledgement_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_subtotalcc__c</fullName>
        <formula>rstk__subtotal__c  *  rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackh_taxtotalcc__c</fullName>
        <formula>rstk__taxtotal__c  *  rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Handling Amount</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamtcc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Handling Amount - Customer Currency</inlineHelpText>
        <label>Handling Amount - Customer Currency</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__isquote__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>True if this is a print template for a quote rather than an order</inlineHelpText>
        <label>Is A Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__maxqtydecimal__c</fullName>
        <inlineHelpText>Maximum Decimal Quantity</inlineHelpText>
        <label>Max Qty Decimal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__order__c</fullName>
        <inlineHelpText>Acknowledgement Header Order Number</inlineHelpText>
        <label>Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__orderdate__c</fullName>
        <inlineHelpText>Acknowledgement Header Order Date</inlineHelpText>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ordertotal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ordertotalcc__c</fullName>
        <inlineHelpText>Order Total - Customer Currency</inlineHelpText>
        <label>Order Total - Customer Currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packageamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packaging Amount</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packageamtcc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Packaging Amount - Customer Currency</inlineHelpText>
        <label>Packaging Amount - Customer Currency</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pages__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__paymentterms__c</fullName>
        <inlineHelpText>Acknowledgement Header Payment Terms</inlineHelpText>
        <label>Payment Terms</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__phone__c</fullName>
        <inlineHelpText>Acknowledgement Header Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__ppytotal__c</fullName>
        <label>Prepayment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ppytotalcc__c</fullName>
        <label>Prepayment Total - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__quoteref__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quote Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoaddress1__c</fullName>
        <inlineHelpText>Acknowledgement Header Ship-to Address Line 1</inlineHelpText>
        <label>Ship To Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoaddress2__c</fullName>
        <inlineHelpText>Acknowledgement Header Ship-to Address Line 2</inlineHelpText>
        <label>Ship To Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoaddress3__c</fullName>
        <inlineHelpText>Acknowledgement Header Ship-to Address Line 3</inlineHelpText>
        <label>Ship To Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptocity__c</fullName>
        <inlineHelpText>Acknowledgement Header Ship-to City</inlineHelpText>
        <label>Ship To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptocountry__c</fullName>
        <inlineHelpText>Acknowledgement Header Ship-to Country</inlineHelpText>
        <label>Ship To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoemail__c</fullName>
        <inlineHelpText>Ship-To Email</inlineHelpText>
        <label>Ship To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__shiptofax__c</fullName>
        <inlineHelpText>Ship-To Fax</inlineHelpText>
        <label>Ship To Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoname2__c</fullName>
        <label>Ship To Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoname__c</fullName>
        <inlineHelpText>Ship-To Name</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptophone__c</fullName>
        <inlineHelpText>Ship-To Phone</inlineHelpText>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__shiptostate__c</fullName>
        <inlineHelpText>Acknowledgement Header Ship-to State</inlineHelpText>
        <label>Ship To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptotal__c</fullName>
        <inlineHelpText>Ship Total</inlineHelpText>
        <label>Shipping Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__shiptotalcc__c</fullName>
        <inlineHelpText>Ship Total - Customer Currency</inlineHelpText>
        <label>Shipping Total - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__shiptozip__c</fullName>
        <inlineHelpText>Acknowledgement Header Zip Code</inlineHelpText>
        <label>Ship To Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipvia__c</fullName>
        <inlineHelpText>Acknowledgement Header Ship Via (type)</inlineHelpText>
        <label>Ship Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>RMA Header</label>
        <referenceTo>rstk__sormh__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Headers (RMA Header)</relationshipLabel>
        <relationshipName>sormhfsoackh</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__state__c</fullName>
        <inlineHelpText>Acknowledgement Header State</inlineHelpText>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__subtotal__c</fullName>
        <inlineHelpText>Sub Total</inlineHelpText>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__subtotalcc__c</fullName>
        <inlineHelpText>Sub Total - Customer Currency</inlineHelpText>
        <label>SubTotal - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxexempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Acknowledgement Header Tax Exempt Status</inlineHelpText>
        <label>Tax Exempt (Resale)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__taxrate__c</fullName>
        <inlineHelpText>Acknowledgement Header Tax Rate</inlineHelpText>
        <label>Sales Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__taxtotal__c</fullName>
        <inlineHelpText>Tax Total</inlineHelpText>
        <label>TaxTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taxtotalcc__c</fullName>
        <inlineHelpText>Tax Total - Customer Currency</inlineHelpText>
        <label>TaxTotal - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__zip__c</fullName>
        <inlineHelpText>Acknowledgement Header Zip Code</inlineHelpText>
        <label>Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SO Acknowledgement Header</label>
    <listViews>
        <fullName>rstk__RS_Custom_SO_Acknowledgement_Headers</fullName>
        <columns>NAME</columns>
        <columns>rstk__division__c</columns>
        <columns>rstk__order__c</columns>
        <columns>rstk__fsoackh_sohdr__c</columns>
        <columns>rstk__ordertotal__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Custom SO Acknowledgement Headers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Acknowledgement Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>